--- a/research/01_data_ingestion.ipynb
+++ b/research/01_data_ingestion.ipynb
@@ -40,16 +40,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'d:\\\\PROJECTS\\\\Chicken Disease Prediction'"
+       "'d:\\\\PROJECTS\\\\Chicken Disease Prediction\\\\research'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,20 +70,111 @@
     "@dataclass(frozen=True)\n",
     "class DataIngestionConfig:\n",
     "    root_dir: Path\n",
-    "    source_URL: str\n",
     "    local_data_file: Path\n",
     "    unzip_dir: Path"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
     "from ChickenDiseaseClassifier.constants import *\n",
     "from ChickenDiseaseClassifier.utils.common import read_yaml,create_directories\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class ConfigurationManager:\n",
+    "    def __init__(\n",
+    "        self,\n",
+    "        config_filepath = CONFIG_FILE_PATH,\n",
+    "        params_filepath = PARAMS_FILE_PATH):\n",
+    "\n",
+    "        self.config = read_yaml(Path(\"D:\\\\PROJECTS\\\\Chicken Disease Prediction\\\\config\\\\config.yaml\"))\n",
+    "        self.params = read_yaml(Path(\"D:\\\\PROJECTS\\\\Chicken Disease Prediction\\\\params.yaml\"))\n",
+    "\n",
+    "        create_directories([self.config.artifacts_root])\n",
+    "\n",
+    "    def get_data_ingestion_config(self) -> DataIngestionConfig:\n",
+    "        config = self.config.data_ingestion\n",
+    "\n",
+    "        create_directories([config.root_dir])\n",
+    "\n",
+    "        data_ingestion_config = DataIngestionConfig(\n",
+    "            root_dir=config.root_dir,\n",
+    "            local_data_file=config.local_data_file,\n",
+    "            unzip_dir=config.unzip_dir\n",
+    "        )\n",
+    "\n",
+    "        return data_ingestion_config"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import urllib.request as request\n",
+    "import zipfile\n",
+    "from ChickenDiseaseClassifier import logger\n",
+    "from ChickenDiseaseClassifier.utils.common import get_size"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class DataIngestion:\n",
+    "    def __init__(self, config: DataIngestionConfig):\n",
+    "        self.config = config\n",
+    "    \n",
+    "    def extract_zip_file(self):\n",
+    "        \"\"\"\n",
+    "        zip_file_path: str\n",
+    "        Extracts the zip file into the data directory\n",
+    "        Function returns None\n",
+    "        \"\"\"\n",
+    "        unzip_path = self.config.unzip_dir\n",
+    "        os.makedirs(unzip_path, exist_ok=True)\n",
+    "        with zipfile.ZipFile(self.config.local_data_file, 'r') as zip_ref:\n",
+    "            zip_ref.extractall(unzip_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2023-10-14 23:03:36,409: INFO: common: yaml file:D:\\PROJECTS\\Chicken Disease Prediction\\config\\config.yaml loaded successfully]\n",
+      "[2023-10-14 23:03:36,410: INFO: common: yaml file:D:\\PROJECTS\\Chicken Disease Prediction\\params.yaml loaded successfully]\n",
+      "[2023-10-14 23:03:36,412: INFO: common: created directory at: artifacts]\n",
+      "[2023-10-14 23:03:36,413: INFO: common: created directory at: artifacts/data_ingestion]\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    config = ConfigurationManager()\n",
+    "    data_ingestion_config = config.get_data_ingestion_config()\n",
+    "    data_ingestion = DataIngestion(config=data_ingestion_config)\n",
+    "    data_ingestion.extract_zip_file()\n",
+    "except Exception as e:\n",
+    "    raise e"
    ]
   },
   {
